[gd_scene load_steps=47 format=3 uid="uid://b2dt38w3dq77y"]

[ext_resource type="Texture2D" uid="uid://dk43cw53tkij3" path="res://Sprites/Dino/Idle/idle.png" id="1_5xc43"]
[ext_resource type="Script" path="res://Scripts/Dino/dino.gd" id="1_bfv14"]
[ext_resource type="Texture2D" uid="uid://dejddctifgqra" path="res://Sprites/Dino/Jump/jump.png" id="2_du1xp"]
[ext_resource type="Texture2D" uid="uid://b5hrfxecxjont" path="res://Sprites/Dino/Crashed/crashed.png" id="2_jkc2w"]
[ext_resource type="Texture2D" uid="uid://dto5vxpx6b32l" path="res://Sprites/Dino/Running/ducking.png" id="2_o3m6b"]
[ext_resource type="Texture2D" uid="uid://dvji72cwxsc33" path="res://Sprites/Dino/Idle/idle_blink.png" id="2_rjqo5"]
[ext_resource type="Script" path="res://Scripts/Dino/ finite_state_machine.gd" id="3_w42jn"]
[ext_resource type="Script" path="res://Scripts/Dino/dino_idle_state.gd" id="4_hk6l3"]
[ext_resource type="Texture2D" uid="uid://fr4kgnhf7anr" path="res://Sprites/Dino/Running/running.png" id="4_paxcv"]
[ext_resource type="Script" path="res://Scripts/Dino/dino_running_state.gd" id="6_sg60t"]
[ext_resource type="Script" path="res://Scripts/Dino/dino_jump_state.gd" id="9_fihdi"]
[ext_resource type="Script" path="res://Scripts/Dino/dino_ducking_state.gd" id="11_ew5iw"]
[ext_resource type="Script" path="res://Scripts/Dino/dino_crashed_state.gd" id="12_uuvtm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqeuv"]
atlas = ExtResource("2_jkc2w")
region = Rect2(1, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kseqs"]
atlas = ExtResource("2_jkc2w")
region = Rect2(17, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u61h5"]
atlas = ExtResource("2_jkc2w")
region = Rect2(33, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuujy"]
atlas = ExtResource("2_jkc2w")
region = Rect2(49, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq44p"]
atlas = ExtResource("2_jkc2w")
region = Rect2(65, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xsf1"]
atlas = ExtResource("2_o3m6b")
region = Rect2(20, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvgk5"]
atlas = ExtResource("2_o3m6b")
region = Rect2(39, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_311ne"]
atlas = ExtResource("2_o3m6b")
region = Rect2(58, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_myt2a"]
atlas = ExtResource("2_o3m6b")
region = Rect2(77, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjio4"]
atlas = ExtResource("2_o3m6b")
region = Rect2(96, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr817"]
atlas = ExtResource("2_o3m6b")
region = Rect2(115, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x40ph"]
atlas = ExtResource("2_du1xp")
region = Rect2(49, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_adsra"]
atlas = ExtResource("1_5xc43")
region = Rect2(1, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_omssj"]
atlas = ExtResource("1_5xc43")
region = Rect2(17, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwvlj"]
atlas = ExtResource("1_5xc43")
region = Rect2(33, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fv43"]
atlas = ExtResource("1_5xc43")
region = Rect2(49, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2inkp"]
atlas = ExtResource("2_rjqo5")
region = Rect2(1, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ignfu"]
atlas = ExtResource("2_rjqo5")
region = Rect2(17, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyu3w"]
atlas = ExtResource("2_rjqo5")
region = Rect2(33, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d80hm"]
atlas = ExtResource("2_rjqo5")
region = Rect2(49, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppwao"]
atlas = ExtResource("2_du1xp")
region = Rect2(17, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq0bs"]
atlas = ExtResource("2_du1xp")
region = Rect2(33, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi10v"]
atlas = ExtResource("4_paxcv")
region = Rect2(1, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncac8"]
atlas = ExtResource("4_paxcv")
region = Rect2(17, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7mt6"]
atlas = ExtResource("4_paxcv")
region = Rect2(33, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6shfx"]
atlas = ExtResource("4_paxcv")
region = Rect2(49, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef5uq"]
atlas = ExtResource("4_paxcv")
region = Rect2(65, 0, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsb3m"]
atlas = ExtResource("4_paxcv")
region = Rect2(81, 0, 15, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ou5xr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqeuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kseqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u61h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuujy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq44p")
}],
"loop": false,
"name": &"crashed",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xsf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvgk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_311ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myt2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjio4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr817")
}],
"loop": true,
"name": &"ducking",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x40ph")
}],
"loop": false,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adsra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omssj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwvlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fv43")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2inkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ignfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyu3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d80hm")
}],
"loop": false,
"name": &"idle_blink",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppwao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq0bs")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi10v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncac8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7mt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6shfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsb3m")
}],
"loop": true,
"name": &"running",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34rtb"]
size = Vector2(99, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipvg3"]
size = Vector2(60, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abe8i"]
size = Vector2(106, 61)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ixg57"]
radius = 21.5382
height = 73.9951

[node name="Dino" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_bfv14")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -60.5)
scale = Vector2(7.55882, 7.55882)
sprite_frames = SubResource("SpriteFrames_ou5xr")
animation = &"idle"
metadata/_edit_lock_ = true

[node name="RunningCollisionTop" type="CollisionShape2D" parent="."]
position = Vector2(7.5, -98)
shape = SubResource("RectangleShape2D_34rtb")
debug_color = Color(0.929412, 0.262745, 0, 0.419608)

[node name="RunningCollisionBottom" type="CollisionShape2D" parent="."]
position = Vector2(4, -34)
shape = SubResource("RectangleShape2D_ipvg3")

[node name="DuckingCollisionTop" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(15, -83.5)
shape = SubResource("RectangleShape2D_abe8i")
disabled = true

[node name="DuckingCollisionBottom" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-16, -31)
rotation = 0.870919
shape = SubResource("CapsuleShape2D_ixg57")
disabled = true
debug_color = Color(0.996078, 0, 0.654902, 0.419608)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("_state")]
script = ExtResource("3_w42jn")
_state = NodePath("DinoIdleState")

[node name="DinoIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_anim")]
script = ExtResource("4_hk6l3")
_anim = NodePath("../../AnimatedSprite")

[node name="DinoRunningState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_anim", "_dino", "_running_collisions")]
script = ExtResource("6_sg60t")
_anim = NodePath("../../AnimatedSprite")
_dino = NodePath("../..")
_running_collisions = [NodePath("../../RunningCollisionTop"), NodePath("../../RunningCollisionBottom")]

[node name="DinoJumpState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_anim", "_dino", "_jump_collisions")]
script = ExtResource("9_fihdi")
_anim = NodePath("../../AnimatedSprite")
_dino = NodePath("../..")
_jump_collisions = [NodePath("../../RunningCollisionTop"), NodePath("../../RunningCollisionBottom")]

[node name="DinoDuckingState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_anim", "_dino", "_ducking_collisions")]
script = ExtResource("11_ew5iw")
_anim = NodePath("../../AnimatedSprite")
_dino = NodePath("../..")
_ducking_collisions = [NodePath("../../DuckingCollisionTop"), NodePath("../../DuckingCollisionBottom")]

[node name="DinoCrashedState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_anim")]
script = ExtResource("12_uuvtm")
_anim = NodePath("../../AnimatedSprite")
